# portabellas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release.config.mjs
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  main.yml  pr-format.yml  pr.yml  release.yml
docs/reference/: generate_reference_pages.py
src/portabella/: __init__.py  main.py
src/portabellas/_config/: __init__.py  _polars.py
src/portabellas/_utils/: __init__.py  _lazy.py  _string.py
src/portabellas/_validation/: __init__.py  _check_indices.py  _check_row_counts_are_equal.py  _check_time_zone.py
src/portabellas/containers/: _column.py  _table.py
src/portabellas/exceptions/: __init__.py
src/portabellas/typing/: __init__.py  _data_type.py  _polars_data_type.py
tests/helpers/: __init__.py  _assertions.py
tests/portabella/: test_main.py
tests/portabellas/: test_demo.py
tests/portabellas/_utils/: test_get_similar_strings.py  test_safely_collect_lazy_frame.py  test_safely_collect_lazy_frame_schema.py
tests/portabellas/containers/_column/: test_contains.py  test_from_lazy_frame.py  test_from_polars_series.py  test_get_value.py  test_getitem.py  test_init.py  test_iter.py  test_len.py  test_name.py  test_repr.py  test_row_count.py  test_str.py  test_to_table.py  test_type.py
tests/portabellas/containers/_table/: test_from_polars_data_frame.py  test_from_polars_lazy_frame.py  test_init.py  test_repr.py  test_row_count.py  test_str.py
