[project]
name = "portabella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--tb=short", # short tracebacks
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D103",
    "S101",
]

